Se agrega ejemplo de cifrado de datos en sql server. Se inserta semilla desde startup Se personaliza vista login de Entity Framework

--- a/JadeErp/JadeWebApp/Views/Jobs/Index.cshtml
+++ b/JadeErp/JadeWebApp/Views/Jobs/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<JadeWebApp.Models.Job>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Administración de puesto";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear nuevo</a>
 </p>
 <table class="table">
     <thead>
