--- a/JadeErp/JadeWebApp/Views/Employees/Index.cshtml
+++ b/JadeErp/JadeWebApp/Views/Employees/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<JadeWebApp.Models.Employee>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Administración de empleados";
 }
 
 <h1>Index</h1>
